@@ -22,45 +22,23 @@
 // to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
 // Boston, MA 02110-1301 USA.
 
-#include "ServiceSpecialDoubleColumn.h"
-#include "nagios.h"
-#include "logger.h"
-#include "time.h"
+#ifndef ServiceSpecialDoubleColumn_h
+#define ServiceSpecialDoubleColumn_h
 
-double ServiceSpecialDoubleColumn::getValue(void *data)
+#include "config.h"
+#include "DoubleColumn.h"
+
+#define HSDC_STALENESS 1
+
+class HostSpecialDoubleColumn : public DoubleColumn
 {
-    data = shiftPointer(data);
-    if (!data) return 0;
+    int _type;
 
-    service *svc = (service *)data;
-    switch (_type) {
-        case SSDC_STALENESS:
-        {
-        	bool is_cmk_passive = !strncmp(svc->check_command_ptr->name, "check_mk-", 9);
+public:
+    HostSpecialDoubleColumn(string name, string description, int hsdc_type, int indirect)
+        : DoubleColumn(name, description, indirect) , _type(hsdc_type) {}
+    double getValue(void *data);
+};
 
-        	time_t check_result_age = time(0) - svc->last_check;
-        	service *tmp_svc;
+#endif // ServiceSpecialDoubleColumn_h
 
-        	// check_mk PASSIVE CHECK: Find check-mk service and get its check interval
-        	if (is_cmk_passive) {
-        		host *host = svc->host_ptr;
-        		servicesmember *svc_member = host->services;
-        		double check_interval = 1;
-        		while (svc_member != 0) {
-        			tmp_svc = svc_member->service_ptr;
-        			if (!strncmp(tmp_svc->check_command_ptr->name, "check-mk", 9)) {
-        				check_interval = tmp_svc->check_interval * 60;
-                		return check_result_age / check_interval;
-        			}
-        			svc_member = svc_member->next;
-        		}
-        		return 1; // Shouldnt happen! We always except check-mk service
-        	}
-        	else // Other non-cmk passive and active checks
-        	{
-        		return check_result_age / ((svc->check_interval == 0 ? 1 : svc->check_interval) * 60);
-        	}
-        }
-    }
-    return -1; // Never reached
-}
